--- a/notebooks/02-download-images.ipynb
+++ b/notebooks/02-download-images.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "596e2f44",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading images:   0%|          | 0/1426337 [00:00<?, ?it/s]"
+      "Downloading images: 100%|██████████| 1426337/1426337 [27:45<00:00, 856.37it/s] \n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "📊 Download Statistics:\n",
+      "  Total: 1426337\n",
+      "  Success: 1421970 (99.7%)\n",
+      "  Failed: 4367\n",
+      "\n",
+      "⚠️  Sample errors:\n",
+      "  - Error (InvalidUrlClientError): B06Y1CMFQZ\n",
+      "  - Error (InvalidUrlClientError): B00EUHD6MI\n",
+      "  - 404 Not Found: B00R9DBAV4\n",
+      "  - Error (InvalidUrlClientError): B07DYS4CBS\n",
+      "  - HTTP 429: B09C2MVYNL\n",
+      "  - HTTP 429: B07PWY7QFK\n",
+      "  - HTTP 429: B09YBWL7RW\n",
+      "  - HTTP 429: B097RBKCWH\n",
+      "  - HTTP 429: B0CB9H3JDS\n",
+      "  - HTTP 429: B07CZ5N8BL\n"
      ]
     }
    ],
