--- a/notebooks/04-embed-images.ipynb
+++ b/notebooks/04-embed-images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5fcba72a",
    "metadata": {},
    "outputs": [
@@ -123,7 +123,7 @@
     "    model='Qwen/Qwen3-VL-Embedding-2B',\n",
     "    runner='pooling',\n",
     "    max_model_len=4096,\n",
-    "    gpu_memory_utilization=0.85,  # Reduce from 0.9 to 0.85 (19.6 GB)\n",
+    "    gpu_memory_utilization=0.85,\n",
     "    quantization=\"mxfp4\"\n",
     ")"
    ]
