image search working with sample databse

--- a/notebooks/09-write-to-sample-db.ipynb
+++ b/notebooks/09-write-to-sample-db.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "3f3582f4",
    "metadata": {},
    "outputs": [
@@ -134,10 +134,10 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (73_995, 11)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>asin</th><th>country</th><th>title</th><th>image_path</th><th>product_url</th><th>stars</th><th>reviews</th><th>price</th><th>is_best_seller</th><th>bought_in_last_month</th><th>labels</th></tr><tr><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>f64</td><td>i64</td><td>f64</td><td>bool</td><td>i64</td><td>i64</td></tr></thead><tbody><tr><td>&quot;B0BD5DNWZ8&quot;</td><td>&quot;india&quot;</td><td>&quot;पुरुषों के लिए फॉर्मल डर्बी शू…</td><td>&quot;/home/administrator/Desktop/da…</td><td>&quot;https://www.amazon.in/dp/B0BD5…</td><td>5.0</td><td>2</td><td>2723.0</td><td>false</td><td>0</td><td>200</td></tr><tr><td>&quot;B0C5LCM27S&quot;</td><td>&quot;uk&quot;</td><td>&quot;NHNKB Wrap Dress Summer Women …</td><td>&quot;/home/administrator/Desktop/da…</td><td>&quot;https://www.amazon.co.uk/dp/B0…</td><td>0.0</td><td>0</td><td>14.71</td><td>false</td><td>0</td><td>16</td></tr><tr><td>&quot;B09N9Y2F52&quot;</td><td>&quot;india&quot;</td><td>&quot;KRAVETTO Sports Towel 893&quot;</td><td>&quot;/home/administrator/Desktop/da…</td><td>&quot;https://www.amazon.in/dp/B09N9…</td><td>0.0</td><td>0</td><td>650.0</td><td>false</td><td>0</td><td>193</td></tr><tr><td>&quot;B07H8DRMRK&quot;</td><td>&quot;canada&quot;</td><td>&quot;HQRP Push Button On-Off Switch…</td><td>&quot;/home/administrator/Desktop/da…</td><td>&quot;https://www.amazon.ca/dp/B07H8…</td><td>4.7</td><td>80</td><td>9.95</td><td>false</td><td>0</td><td>9</td></tr><tr><td>&quot;B0BWFF695K&quot;</td><td>&quot;india&quot;</td><td>&quot;Mordan टी-शर्ट फोटो प्रिंट पुर…</td><td>&quot;/home/administrator/Desktop/da…</td><td>&quot;https://www.amazon.in/dp/B0BWF…</td><td>0.0</td><td>0</td><td>269.1</td><td>false</td><td>0</td><td>327</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>&quot;B0CH35K9JQ&quot;</td><td>&quot;india&quot;</td><td>&quot;Arm Band for Bajaj Sports Arm …</td><td>&quot;/home/administrator/Desktop/da…</td><td>&quot;https://www.amazon.in/dp/B0CH3…</td><td>0.0</td><td>0</td><td>349.0</td><td>false</td><td>0</td><td>277</td></tr><tr><td>&quot;B09LGB57PF&quot;</td><td>&quot;canada&quot;</td><td>&quot;Dovesun Fishing Rod Repair Kit…</td><td>&quot;/home/administrator/Desktop/da…</td><td>&quot;https://www.amazon.ca/dp/B09LG…</td><td>4.5</td><td>313</td><td>15.99</td><td>false</td><td>0</td><td>485</td></tr><tr><td>&quot;B0C96H6ZB7&quot;</td><td>&quot;india&quot;</td><td>&quot;महिला आकस्मिक स्लिपन लोफर वजन …</td><td>&quot;/home/administrator/Desktop/da…</td><td>&quot;https://www.amazon.in/dp/B0C96…</td><td>0.0</td><td>0</td><td>1444.0</td><td>false</td><td>0</td><td>189</td></tr><tr><td>&quot;B0CCYHPSKS&quot;</td><td>&quot;canada&quot;</td><td>&quot;ZENWAWA Corduroy Tote Bag for …</td><td>&quot;/home/administrator/Desktop/da…</td><td>&quot;https://www.amazon.ca/dp/B0CCY…</td><td>0.0</td><td>0</td><td>34.14</td><td>false</td><td>0</td><td>236</td></tr><tr><td>&quot;B0C6MFN8VQ&quot;</td><td>&quot;uk&quot;</td><td>&quot;phonxia Gray 1 Person Double D…</td><td>&quot;/home/administrator/Desktop/da…</td><td>&quot;https://www.amazon.co.uk/dp/B0…</td><td>0.0</td><td>0</td><td>31.99</td><td>false</td><td>0</td><td>56</td></tr></tbody></table></div>"
+       "<small>shape: (369_977, 11)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>asin</th><th>country</th><th>title</th><th>image_path</th><th>product_url</th><th>stars</th><th>reviews</th><th>price</th><th>is_best_seller</th><th>bought_in_last_month</th><th>labels</th></tr><tr><td>str</td><td>str</td><td>str</td><td>str</td><td>str</td><td>f64</td><td>i64</td><td>f64</td><td>bool</td><td>i64</td><td>i64</td></tr></thead><tbody><tr><td>&quot;B0BD5DNWZ8&quot;</td><td>&quot;india&quot;</td><td>&quot;पुरुषों के लिए फॉर्मल डर्बी शू…</td><td>&quot;/home/administrator/Desktop/da…</td><td>&quot;https://www.amazon.in/dp/B0BD5…</td><td>5.0</td><td>2</td><td>2723.0</td><td>false</td><td>0</td><td>200</td></tr><tr><td>&quot;B0C5LCM27S&quot;</td><td>&quot;uk&quot;</td><td>&quot;NHNKB Wrap Dress Summer Women …</td><td>&quot;/home/administrator/Desktop/da…</td><td>&quot;https://www.amazon.co.uk/dp/B0…</td><td>0.0</td><td>0</td><td>14.71</td><td>false</td><td>0</td><td>16</td></tr><tr><td>&quot;B09N9Y2F52&quot;</td><td>&quot;india&quot;</td><td>&quot;KRAVETTO Sports Towel 893&quot;</td><td>&quot;/home/administrator/Desktop/da…</td><td>&quot;https://www.amazon.in/dp/B09N9…</td><td>0.0</td><td>0</td><td>650.0</td><td>false</td><td>0</td><td>193</td></tr><tr><td>&quot;B074YF4CHQ&quot;</td><td>&quot;canada&quot;</td><td>&quot;Heat Shrink Tube, Wire Wrap El…</td><td>&quot;/home/administrator/Desktop/da…</td><td>&quot;https://www.amazon.ca/dp/B074Y…</td><td>4.6</td><td>15</td><td>13.9</td><td>false</td><td>0</td><td>9</td></tr><tr><td>&quot;B0B7DHF2LC&quot;</td><td>&quot;india&quot;</td><td>&quot;भारतीय रेलवे लोगो ऑरेंज कॉलर ट…</td><td>&quot;/home/administrator/Desktop/da…</td><td>&quot;https://www.amazon.in/dp/B0B7D…</td><td>1.0</td><td>1</td><td>499.0</td><td>false</td><td>0</td><td>327</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>&quot;B005978KGA&quot;</td><td>&quot;usa&quot;</td><td>&quot;Jedi Fleece Bathrobe (Medium/T…</td><td>&quot;/home/administrator/Desktop/da…</td><td>&quot;https://www.amazon.com/dp/B005…</td><td>4.7</td><td>0</td><td>59.99</td><td>false</td><td>0</td><td>34</td></tr><tr><td>&quot;B079NNYV6V&quot;</td><td>&quot;usa&quot;</td><td>&quot;Little Boys&#x27; City Garbage Truc…</td><td>&quot;/home/administrator/Desktop/da…</td><td>&quot;https://www.amazon.com/dp/B079…</td><td>4.6</td><td>59</td><td>23.99</td><td>false</td><td>0</td><td>38</td></tr><tr><td>&quot;B07N4PJVTS&quot;</td><td>&quot;canada&quot;</td><td>&quot;Long Distance Relationship Gif…</td><td>&quot;/home/administrator/Desktop/da…</td><td>&quot;https://www.amazon.ca/dp/B07N4…</td><td>5.0</td><td>1</td><td>15.99</td><td>false</td><td>0</td><td>38</td></tr><tr><td>&quot;B0C4SHQXMB&quot;</td><td>&quot;uk&quot;</td><td>&quot;ASSCA Self Inflating Camping M…</td><td>&quot;/home/administrator/Desktop/da…</td><td>&quot;https://www.amazon.co.uk/dp/B0…</td><td>2.8</td><td>24</td><td>15.99</td><td>false</td><td>100</td><td>16</td></tr><tr><td>&quot;B00O4BW1TY&quot;</td><td>&quot;uk&quot;</td><td>&quot;12mm 35mt Braid on Braid Polye…</td><td>&quot;/home/administrator/Desktop/da…</td><td>&quot;https://www.amazon.co.uk/dp/B0…</td><td>0.0</td><td>0</td><td>101.5</td><td>false</td><td>0</td><td>16</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (73_995, 11)\n",
+       "shape: (369_977, 11)\n",
        "┌────────────┬─────────┬─────────────┬─────────────┬───┬────────┬────────────┬────────────┬────────┐\n",
        "│ asin       ┆ country ┆ title       ┆ image_path  ┆ … ┆ price  ┆ is_best_se ┆ bought_in_ ┆ labels │\n",
        "│ ---        ┆ ---     ┆ ---         ┆ ---         ┆   ┆ ---    ┆ ller       ┆ last_month ┆ ---    │\n",
@@ -154,44 +154,42 @@
        "│ B09N9Y2F52 ┆ india   ┆ KRAVETTO    ┆ /home/admin ┆ … ┆ 650.0  ┆ false      ┆ 0          ┆ 193    │\n",
        "│            ┆         ┆ Sports      ┆ istrator/De ┆   ┆        ┆            ┆            ┆        │\n",
        "│            ┆         ┆ Towel 893   ┆ sktop/da…   ┆   ┆        ┆            ┆            ┆        │\n",
-       "│ B07H8DRMRK ┆ canada  ┆ HQRP Push   ┆ /home/admin ┆ … ┆ 9.95   ┆ false      ┆ 0          ┆ 9      │\n",
-       "│            ┆         ┆ Button      ┆ istrator/De ┆   ┆        ┆            ┆            ┆        │\n",
-       "│            ┆         ┆ On-Off      ┆ sktop/da…   ┆   ┆        ┆            ┆            ┆        │\n",
-       "│            ┆         ┆ Switch…     ┆             ┆   ┆        ┆            ┆            ┆        │\n",
-       "│ B0BWFF695K ┆ india   ┆ Mordan      ┆ /home/admin ┆ … ┆ 269.1  ┆ false      ┆ 0          ┆ 327    │\n",
-       "│            ┆         ┆ टी-शर्ट फोटो ┆ istrator/De ┆   ┆        ┆            ┆            ┆        │\n",
-       "│            ┆         ┆ प्रिंट पुर…    ┆ sktop/da…   ┆   ┆        ┆            ┆            ┆        │\n",
+       "│ B074YF4CHQ ┆ canada  ┆ Heat Shrink ┆ /home/admin ┆ … ┆ 13.9   ┆ false      ┆ 0          ┆ 9      │\n",
+       "│            ┆         ┆ Tube, Wire  ┆ istrator/De ┆   ┆        ┆            ┆            ┆        │\n",
+       "│            ┆         ┆ Wrap El…    ┆ sktop/da…   ┆   ┆        ┆            ┆            ┆        │\n",
+       "│ B0B7DHF2LC ┆ india   ┆ भारतीय रेलवे  ┆ /home/admin ┆ … ┆ 499.0  ┆ false      ┆ 0          ┆ 327    │\n",
+       "│            ┆         ┆ लोगो ऑरेंज    ┆ istrator/De ┆   ┆        ┆            ┆            ┆        │\n",
+       "│            ┆         ┆ कॉलर ट…     ┆ sktop/da…   ┆   ┆        ┆            ┆            ┆        │\n",
        "│ …          ┆ …       ┆ …           ┆ …           ┆ … ┆ …      ┆ …          ┆ …          ┆ …      │\n",
-       "│ B0CH35K9JQ ┆ india   ┆ Arm Band    ┆ /home/admin ┆ … ┆ 349.0  ┆ false      ┆ 0          ┆ 277    │\n",
-       "│            ┆         ┆ for Bajaj   ┆ istrator/De ┆   ┆        ┆            ┆            ┆        │\n",
-       "│            ┆         ┆ Sports Arm  ┆ sktop/da…   ┆   ┆        ┆            ┆            ┆        │\n",
-       "│            ┆         ┆ …           ┆             ┆   ┆        ┆            ┆            ┆        │\n",
-       "│ B09LGB57PF ┆ canada  ┆ Dovesun     ┆ /home/admin ┆ … ┆ 15.99  ┆ false      ┆ 0          ┆ 485    │\n",
-       "│            ┆         ┆ Fishing Rod ┆ istrator/De ┆   ┆        ┆            ┆            ┆        │\n",
-       "│            ┆         ┆ Repair Kit… ┆ sktop/da…   ┆   ┆        ┆            ┆            ┆        │\n",
-       "│ B0C96H6ZB7 ┆ india   ┆ महिला       ┆ /home/admin ┆ … ┆ 1444.0 ┆ false      ┆ 0          ┆ 189    │\n",
-       "│            ┆         ┆ आकस्मिक      ┆ istrator/De ┆   ┆        ┆            ┆            ┆        │\n",
-       "│            ┆         ┆ स्लिपन लोफर  ┆ sktop/da…   ┆   ┆        ┆            ┆            ┆        │\n",
-       "│            ┆         ┆ वजन …       ┆             ┆   ┆        ┆            ┆            ┆        │\n",
-       "│ B0CCYHPSKS ┆ canada  ┆ ZENWAWA     ┆ /home/admin ┆ … ┆ 34.14  ┆ false      ┆ 0          ┆ 236    │\n",
-       "│            ┆         ┆ Corduroy    ┆ istrator/De ┆   ┆        ┆            ┆            ┆        │\n",
-       "│            ┆         ┆ Tote Bag    ┆ sktop/da…   ┆   ┆        ┆            ┆            ┆        │\n",
-       "│            ┆         ┆ for …       ┆             ┆   ┆        ┆            ┆            ┆        │\n",
-       "│ B0C6MFN8VQ ┆ uk      ┆ phonxia     ┆ /home/admin ┆ … ┆ 31.99  ┆ false      ┆ 0          ┆ 56     │\n",
-       "│            ┆         ┆ Gray 1      ┆ istrator/De ┆   ┆        ┆            ┆            ┆        │\n",
-       "│            ┆         ┆ Person      ┆ sktop/da…   ┆   ┆        ┆            ┆            ┆        │\n",
-       "│            ┆         ┆ Double D…   ┆             ┆   ┆        ┆            ┆            ┆        │\n",
+       "│ B005978KGA ┆ usa     ┆ Jedi Fleece ┆ /home/admin ┆ … ┆ 59.99  ┆ false      ┆ 0          ┆ 34     │\n",
+       "│            ┆         ┆ Bathrobe    ┆ istrator/De ┆   ┆        ┆            ┆            ┆        │\n",
+       "│            ┆         ┆ (Medium/T…  ┆ sktop/da…   ┆   ┆        ┆            ┆            ┆        │\n",
+       "│ B079NNYV6V ┆ usa     ┆ Little      ┆ /home/admin ┆ … ┆ 23.99  ┆ false      ┆ 0          ┆ 38     │\n",
+       "│            ┆         ┆ Boys' City  ┆ istrator/De ┆   ┆        ┆            ┆            ┆        │\n",
+       "│            ┆         ┆ Garbage     ┆ sktop/da…   ┆   ┆        ┆            ┆            ┆        │\n",
+       "│            ┆         ┆ Truc…       ┆             ┆   ┆        ┆            ┆            ┆        │\n",
+       "│ B07N4PJVTS ┆ canada  ┆ Long        ┆ /home/admin ┆ … ┆ 15.99  ┆ false      ┆ 0          ┆ 38     │\n",
+       "│            ┆         ┆ Distance    ┆ istrator/De ┆   ┆        ┆            ┆            ┆        │\n",
+       "│            ┆         ┆ Relationshi ┆ sktop/da…   ┆   ┆        ┆            ┆            ┆        │\n",
+       "│            ┆         ┆ p Gif…      ┆             ┆   ┆        ┆            ┆            ┆        │\n",
+       "│ B0C4SHQXMB ┆ uk      ┆ ASSCA Self  ┆ /home/admin ┆ … ┆ 15.99  ┆ false      ┆ 100        ┆ 16     │\n",
+       "│            ┆         ┆ Inflating   ┆ istrator/De ┆   ┆        ┆            ┆            ┆        │\n",
+       "│            ┆         ┆ Camping M…  ┆ sktop/da…   ┆   ┆        ┆            ┆            ┆        │\n",
+       "│ B00O4BW1TY ┆ uk      ┆ 12mm 35mt   ┆ /home/admin ┆ … ┆ 101.5  ┆ false      ┆ 0          ┆ 16     │\n",
+       "│            ┆         ┆ Braid on    ┆ istrator/De ┆   ┆        ┆            ┆            ┆        │\n",
+       "│            ┆         ┆ Braid       ┆ sktop/da…   ┆   ┆        ┆            ┆            ┆        │\n",
+       "│            ┆         ┆ Polye…      ┆             ┆   ┆        ┆            ┆            ┆        │\n",
        "└────────────┴─────────┴─────────────┴─────────────┴───┴────────┴────────────┴────────────┴────────┘"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# statify sample 300k\n",
-    "df_sample = df.sample(fraction=0.01, seed=42)\n",
+    "df_sample = df.sample(fraction=0.05, seed=42)\n",
     "df_sample"
    ]
   },
@@ -205,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "d0961ba2",
    "metadata": {},
    "outputs": [
@@ -214,7 +212,7 @@
      "output_type": "stream",
      "text": [
       "Inserting products into sample database...\n",
-      "✓ Inserted 73,995 products\n"
+      "✓ Inserted 369,977 products\n"
      ]
     }
    ],
@@ -267,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "3bfe7cbb",
    "metadata": {},
    "outputs": [
@@ -275,13 +273,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total products in database: 73,995\n",
+      "Total products in database: 369,977\n",
       "\n",
       "Products by country:\n",
-      "  uk: 22,499\n",
-      "  canada: 21,574\n",
-      "  india: 15,759\n",
-      "  usa: 14,163\n"
+      "  uk: 111,604\n",
+      "  canada: 108,055\n",
+      "  india: 79,264\n",
+      "  usa: 71,054\n"
      ]
     }
    ],
